2009-01-27	The InnoDB Team

	* buf/buf0lru.c:
	Fix a race condition in buf_LRU_invalidate_tablespace():
	The compressed page size (zip_size) was read while the block
	descriptor was no longer protected by a mutex.  This could lead to
	corruption when a table is dropped on a busy system that contains
	compressed tables.

2009-01-26	The InnoDB Team

	* include/buf0buf.h, include/buf0buf.ic, buf/buf0buf.c,
	include/mtr0log.ic, include/row0upd.ic, mtr/mtr0mtr.c,
	btr/btr0sea.c:
	Implement buf_block_align() with pointer arithmetics, as it is in
	the built-in InnoDB distributed with MySQL.  Do not acquire the
	buffer pool mutex before buf_block_align().  This removes a
	scalability bottleneck in the adaptive hash index lookup.  In
	CHECK TABLE, check that buf_pool->page_hash is consistent with
	buf_block_align().

2009-01-23	The InnoDB Team

	* btr/btr0sea.c:
	Fix Bug#42279 Race condition in btr_search_drop_page_hash_when_freed()

2009-01-23	The InnoDB Team

	* include/buf0buf.h, buf/buf0buf.c:
	Remove the unused mode BUF_GET_NOWAIT of buf_page_get_gen()

2009-01-20	The InnoDB Team

	* include/rem0rec.h, include/rem0rec.ic:
	Fix Bug#41571 MySQL segfaults after innodb recovery

2009-01-20	The InnoDB Team

	* lock/lock0lock.c:
	Fix Bug#42152 Race condition in lock_is_table_exclusive()

2009-01-14	The InnoDB Team

	* include/trx0roll.h, trx/trx0roll.c, trx/trx0trx.c:
	Fix Bug#38187 Error 153 when creating savepoints

2009-01-14	The InnoDB Team

	* dict/dict0load.c:
	Fix Bug#42075 dict_load_indexes failure in dict_load_table will
	corrupt the dictionary cache

2009-01-13	The InnoDB Team

	* include/hash0hash.h, include/dict0dict.ic, dict/dict0dict.c,
	include/buf0buf.ic, buf/buf0buddy.c, trx/trx0i_s.c,
	handler/ha_innodb.cc, handler/win_delay_loader.cc,
	dict/dict0mem.c, ha/ha0storage.c, thr/thr0loc.c, fil/fil0fil.c:
	Add the parameter ASSERTION to HASH_SEARCH() macro, and use it for
	light validation of the traversed items in hash table lookups when
	UNIV_DEBUG is enabled.
