@@ -1,3 +1,12 @@
+2009-01-29	The InnoDB Team
+
+	* handler/ha_innodb.cc, include/ibuf0ibuf.h, include/ibuf0ibuf.ic,
+	ibuf/ibuf0ibuf.c:
+	Implement the settable global variable innodb_change_buffering,
+	with the allowed values 'none' and 'inserts'.  The default value
+	'inserts' enables the buffering of inserts to non-unique secondary
+	index trees when the B-tree leaf page is not in the buffer pool.
+
 2009-01-27	The InnoDB Team
 
 	* buf/buf0lru.c:
